# algotrading

./: .env.example  .gitignore  .mcp.json  README.md  playwright-mcp-config.json  test_strategy_import.json
app/server/: README.md  app.py  env.example  pyproject.toml  requirements.txt  server.py
app/server/api/: __init__.py  price_feed.py  routes.py
app/server/config/: __init__.py  settings.py
app/server/core/: __init__.py  backtest_executor.py  backtest_service.py  backtest_validation.py  bot_controller.py  bot_status.py  candle_aggregator.py  comparison_service.py  constants.py  data_models.py  openfx_api.py  strategy_service.py  websocket_manager.py
app/server/db/: __init__.py  database.py  supabase_client.py
app/server/db/migrations/: 001_initial_schema.sql  002_create_strategies_table.sql  003_create_backtests_table.sql  004_add_backtest_progress_fields.sql  005_add_backtest_notes_field.sql
app/server/infrastructure/: __init__.py  instrument_collection.py
app/server/models/: __init__.py  api_price.py  instrument.py  open_trade.py
app/server/scraping/: __init__.py  bloomberg.py  investing.py
app/server/scripts/: create_strategies_table.sql  run_migration.py
app/server/tests/: __init__.py  test_backtest_executor.py  test_backtest_validation.py  test_bot_control_endpoints.py  test_bot_controller.py  test_bot_status_endpoint.py  test_comparison_service.py  test_export_generators.py  test_multi_bot_status.py  test_routes.py  test_supabase_connection.py  test_trades_endpoints.py
app/server/utils/: __init__.py  export_generators.py  logger.py
(+581 files in other folders)
