[project]
name = "forex-trading-server"
version = "1.0.0"
description = "Forex Trading API Server with real-time price data, technical analysis, and market headlines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "supabase>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "lxml>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.9",
    "pillow>=12.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
